data/derived/sp14/progs/unify/prog1766.ml.out
Characters 160-165:
  helper (seen', rest') 
                 ^^^^^
Error: This expression has type bool but an expression was expected of type
         'a list
